[package]
name = "lodestone"
version = "0.2.0"
edition = "2021"

[dependencies]
iced       = { version = "0.13", features = ["image", "svg", "tokio"] }
tokio      = { version = "1", features = ["rt-multi-thread"] }
rfd        = { version = "0.14", features = ["tokio"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip        = "0.6"
toml       = "0.8"
